crates/monochange_python/src/__tests__/snapshots/monochange_python__tests__update_versioned_file_text_normalizes_native_producer_names@poetry.snap
---
source: crates/monochange_python/src/__tests__/lib_tests.rs
expression: result
---
[tool.poetry]
name = "poetry-cli"
version = "2.0.0"

[tool.poetry.dependencies]
py-core = ">=1.1.0" # Keep the canonical dependency spelling.
