crates/monochange_python/src/__tests__/snapshots/monochange_python__tests__update_versioned_file_text_respects_poetry_and_project_version_ownership@poetry-dynamic-project_updated.snap
---
source: crates/monochange_python/src/__tests__/lib_tests.rs
expression: result
---
[project]
name = "dynamic-app"
dynamic = ["version"]

[tool.poetry]
name = "legacy-app"
version = "3.1.0" # Do not fall back from dynamic PEP 621 metadata.
