crates/monochange_python/src/__tests__/snapshots/monochange_python__tests__update_versioned_file_text_respects_poetry_and_project_version_ownership@poetry-project-precedence_updated.snap
---
source: crates/monochange_python/src/__tests__/lib_tests.rs
expression: result
---
[project]
name = "pep621-app"
version = "1.0.1" # PEP 621 owns the release version.

[tool.poetry]
name = "legacy-app"
version = "3.1.0" # Legacy metadata must remain unchanged.
