crates/monochange_python/src/__tests__/snapshots/monochange_python__tests__update_versioned_file_text_respects_poetry_and_project_version_ownership@poetry-version-update_workspace_unchanged.snap
---
source: crates/monochange_python/src/__tests__/lib_tests.rs
expression: result
---
[tool.poetry]
name = "poetry-app"
version = "3.1.0" # Keep the release version comment.
description = "A Poetry-managed package"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
